--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -469,7 +469,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		background: #eaeaea;
 		margin: 0;
 		padding: 0;
-		height: 38vw; /* 16:5 proporção para desktop */
+		height: 38vw; /* 16:5 para desktop */
 		max-height: 600px;
 		min-height: 180px;
 	}
@@ -477,11 +477,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		display: flex;
 		height: 100%;
 		transition: transform 1s cubic-bezier(.4,0,.2,1);
+		will-change: transform;
+		width: calc(100vw * 2); /* 2 banners */
 	}
 	.banner-slide {
-		min-width: 100vw;
+		width: 100vw;
 		height: 100%;
-		position: relative;
+		flex-shrink: 0;
 		display: flex;
 	}
 	.banner-img {
@@ -492,6 +494,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		display: block;
 		background: #eaeaea;
 		filter: brightness(0.92);
+		transition: none;
 	}
 	.banner-dots {
 		position: absolute;
@@ -832,7 +835,7 @@ let bannerInterval;
 
 function showBanner(idx) {
     currentBanner = idx;
-    track.style.transform = `translateX(-${idx * 100}%)`;
+    track.style.transform = `translateX(-${idx * window.innerWidth}px)`;
     dots.forEach((dot, i) => dot.classList.toggle('active', i === idx));
 }
 
